--- a/Systems/100_Baggers/Linc Ltd/Notes/Q1FY24.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q1FY24.md
@@ -1,22 +1,48 @@
-### Q1FY24 Concall Notes:
+## Q1FY24 Concall Notes:
 
+### Products:
 
-
+##### Pentatonic:
 Pentatonic Share: 36% of Sales
-Export Revenue:   16% of Sales
-South and West Zone Revenues: 43% of Sales
-
-
-Pentatonic:
 Pentatonic is the new hero product for the company. It should contribute to 40% of Sales this year. Gross profit margins are expanding due to this.
 
-Morris / Linc Partnership:
-Morris is a leading stationery manufacturer. It will be producing and selling the products in India and outside of India.
+##### Morris / Linc Partnership: 
 
-Touchpoints:
+Morris Linc Private Limited( Subsidiary Co.)
+Morris is a leading stationery manufacturer. It will be producing and selling the products in India and outside of India.
+Morris found that manufacturing in korea is not economical, hence they want to setup base in India.
+
+
+##### Touchpoints:
 Currently having 2.45 Lakh Touchpoints. 
 
-Deli:
+##### Deli:
 Stationey Brand doing 6.8 Crores in revenue. 
+
+##### Financials:
+Export Revenue:   16% of Sales
+South and West Zone Revenues: 43% of Sales
+Writing Instrument Market Share: 7%
+
+Company is now debt free, has paid off all debt over the years and holds free cash of 15 Crores now.
+
+###### Guidance:
+FY24:
+Revenue: 600-625 Crores
+Ebitda Margins: 13-14%
+
+
+FY25: 
+Revenue: 750 Crores
+Pentatonic :40% of Revenue
+Ebitda Margin: 15%
+ROI: 21%
+
+##### Capex:
+Modular Expansion plans next to existing facilities, Basic infra has been made to double capacity to 20 Lakh pens per day,
+Equipment machinery will be added in a modular fashion in sync with demand needs. Total cost of Project = 50 Crores,
+Infra work will be completed with 17 crores from Internal accruals.
+
+
 
 
