--- a/Systems/100_Baggers/Linc Ltd/Notes/Q1FY24.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q1FY24.md
@@ -1,26 +1,53 @@
 ## Q1FY24 Concall Notes:
+Primary consumers are school students. Hence the business goes through some seasonality. Hence during Q1 becauase of
+school holidays and vacations consumption sees a drop. 
+Production is 50:50 Inhouse and outsourced just like many other FMCG manufacturers. Helps during lean periods.
+Currently their main way of selling is through retailers. They keep good relations with retailers and keep giving them
+good display units to keep. 
+Overall they are going big on Pentatonic space. They want that to be a household name. 
+Rs.10 Products contribute to 60% of Revenues. < Rs.10 is 40% of Revenues.
+
+##### Industry:
+Flair pens will be listed soon. 
+
 
 ### Products:
 
 ##### Pentatonic:
 Pentatonic Share: 36% of Sales
 Pentatonic is the new hero product for the company. It should contribute to 40% of Sales this year. Gross profit margins are expanding due to this.
+Launched a Rs.40 pen in some markets. Only did a test run and the response was great. They will now do a proper distribution and then run ads for these.
+
 
 ##### Morris / Linc Partnership: 
 
 Morris Linc Private Limited( Subsidiary Co.)
 Morris is a leading stationery manufacturer. It will be producing and selling the products in India and outside of India.
 Morris found that manufacturing in korea is not economical, hence they want to setup base in India.
+Rs.30-50 is the price range, more premium products.
 
+##### Other Products ( Geometry Boxes, Wooden Pencils, Erasers, Sharpeners etc)
+
+These just contribute to 5% of sales. 
 
 ##### Touchpoints:
 Currently having 2.45 Lakh Touchpoints. 
 
 ##### Deli:
-Stationey Brand doing 6.8 Crores in revenue. 
+Stationey Brand doing 6.8 Crores in revenue. 50% of Deli revenues in CHina come from Ecom space. So that
+improves the opportunity for these guys. Currently overall Ecom is 3% of total Revenues.
+FY23 Deli was 25 Crores and by FY25- 75 Crores estimate
+
+##### Exports:
+Export Revenue:   16% of Sales. On exports the gross margins are better by 4-5%. 
+Currently exporting to 40-50 Countries. Africa, Middle East, Russia, Brazil, North America( Waiting for a good breakthrough over here)
+
+##### Marketing:
+Currently Advertising as a % of Sales is 3%. Currently using print media, social media campaigns and few outdoor cities. But not running
+any TV campaigns becuase they do not have the budget. Since margins are thin in this business.
 
 ##### Financials:
-Export Revenue:   16% of Sales
+
 South and West Zone Revenues: 43% of Sales
 Writing Instrument Market Share: 7%
 
@@ -37,7 +64,10 @@ Revenue: 750 Crores
 Pentatonic :40% of Revenue
 Ebitda Margin: 15%
 ROI: 21%
+Deli: 75 Crores Revenue
 
+All the guidance is based on the growth in pentatonic. The management is very bullish on pentatonic sales.Q1 pentatonic grew at 30% hence the guidance.
+Ecom is 3% of total revenues.
 ##### Capex:
 Modular Expansion plans next to existing facilities, Basic infra has been made to double capacity to 20 Lakh pens per day,
 Equipment machinery will be added in a modular fashion in sync with demand needs. Total cost of Project = 50 Crores,
