--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -3,24 +3,31 @@
 ##### Date: 08.08.2023
 
 
-##### Financials: _(Ratios, Margins, Profits, Revenue etc)_
+#### 1.Financials: _(Ratios, Margins, Profits, Revenue etc)_
 
 
 
-##### Products:
+#### 2.Products:
 
 
 
-##### Capex:
+#### 3.Capex:
 
 
 
-##### Guidance:
+#### 4.Strategy:
 
 
 
-##### Strategy:
+#### 5.Industry:
 
 
 
-##### Industry:
+#### 6.Guidance:
+
+
+
+
+
+
+
