--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -3,26 +3,52 @@
 ##### Date: 08.08.2023
 
 
+
+[blog]: https://eresh-zealous.medium.com/
+[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
 #### 1.Financials: _(Ratios, Margins, Profits, Revenue etc)_
-<code style="color : name_color">text</code>
+```diff
++ green  is this colour
+
+```
+<font color="green;">Word up</font>
 
 
 
+[blog]: https://eresh-zealous.medium.com/
+[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
 #### 2.Products:
+```diff
+! orange
+```
 
 
 
+
+[blog]: https://eresh-zealous.medium.com/
+[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
 #### 3.Capex:
+```diff
+- red
+```
 
 
 
+[blog]: https://eresh-zealous.medium.com/
+[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
 #### 4.Strategy:
+```diff
+# grey
+```
+
+  
+[blog]: https://eresh-zealous.medium.com/
 
 
-
-#### 5.Industry:
-
-
+#### 5.Industry [<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
+```diff
+@@ purple @@
+```
 
 #### 6.Guidance:
 
