--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -5,19 +5,44 @@
 
 
 [blog]: https://eresh-zealous.medium.com/
-[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
-#### 1.Financials: _(Ratios, Margins, Profits, Revenue etc)_
-```diff
-+ green  is this colour
 
-```
-<font color="green;">Word up</font>
+#### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][blog]
+
+* Ratios  :
+    ```
+    1)  ROCE : 40%
+    2)  ROE  : 55%
+    3)  PE   : 25
+    4)  PB   : 1.2
+    ```
+* Margins :
+    ```
+    1)  OPM  : 20%
+    ```
+    ```
+    Notes :
+    Profits margins of Linc depends highly on Crude and Polymer prices.
+    
+
+    ```
+* Profits :
+    ```
+    1)  PBIT : 40%
+    2)  PAT  : 55%
+    3)  EPS  : 25
+    4)  Div  : 1.2
+    ```
+* Revenue :
+    ```
+    1)  Revenue Growth : 30%
+    ```
+
 
 
 
 [blog]: https://eresh-zealous.medium.com/
-[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
-#### 2.Products:
+
+#### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][blog]
 ```diff
 ! orange
 ```
@@ -26,8 +51,8 @@
 
 
 [blog]: https://eresh-zealous.medium.com/
-[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
-#### 3.Capex:
+
+#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
 ```diff
 - red
 ```
@@ -35,8 +60,8 @@
 
 
 [blog]: https://eresh-zealous.medium.com/
-[<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/QGF/Backtest_Code/Python%20Codes/pngs/Bar%20Chart%2009-17.png" />][blog]
-#### 4.Strategy:
+
+#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
 ```diff
 # grey
 ```
@@ -45,12 +70,12 @@
 [blog]: https://eresh-zealous.medium.com/
 
 
-#### 5.Industry [<img align="left" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
+#### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
 ```diff
 @@ purple @@
 ```
 
-#### 6.Guidance:
+#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][blog]
 
 
 
