--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -7,45 +7,70 @@
 [blog]: https://eresh-zealous.medium.com/
 
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][blog]
+```
+This will contain all the Financial numbers and note of the company discussed in the Concall.
+```
 
-* Ratios  :
-    ```
-    1)  ROCE : 40%
-    2)  ROE  : 55%
-    3)  PE   : 25
-    4)  PB   : 1.2
-    ```
-* Margins :
-    ```
-    1)  OPM  : 20%
-    ```
-    ```
-    Notes :
+<!----------------------------- Tab 1 ------------------------------>
+<details> 
+<summary> Ratios</summary>  
+
+1)  ROCE : _40%_
+2)  ROE  : _55%_
+3)  PE   : 25
+4)  PB   : 1.2
+</details>
+<!----------------------------- Tab 2 ------------------------------>
+<details> 
+<summary> Margins</summary>
+
+1)  OPM  : _20%_
+
+    Notes :  
     Profits margins of Linc depends highly on Crude and Polymer prices.
-    
 
-    ```
-* Profits :
-    ```
-    1)  PBIT : 40%
-    2)  PAT  : 55%
-    3)  EPS  : 25
-    4)  Div  : 1.2
-    ```
-* Revenue :
-    ```
-    1)  Revenue Growth : 30%
-    ```
+</details>
+<!----------------------------- Tab 3 ------------------------------>
+<details> 
+<summary> Profits</summary>
+
+1)  PBIT : _40%_
+2)  PAT  : _55%_
+3)  EPS  : 25
+</details>
+<!----------------------------- Tab 4 ------------------------------>
+<details> 
+<summary> Revenue</summary>
+
+1)  Revenue Growth : _30%_
+</details>
+ 
+
 
 
 
 
 [blog]: https://eresh-zealous.medium.com/
-
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][blog]
-```diff
-
 ```
+This will contain all the Products related information given by the company during the Concall.
+```
+
+<!----------------------------- Tab 1 ------------------------------>
+<details> 
+<summary> Pentonic</summary>  
+    Pentonic Information..
+</details>
+<!----------------------------- Tab 2 ------------------------------>
+<details> 
+<summary> Deli</summary>
+    Deli Information..
+</details>
+<!----------------------------- Tab 3 ------------------------------>
+<details> 
+<summary> Sanitizers</summary>
+    Sanitizers Information..
+</details>
 
 
 
@@ -54,7 +79,16 @@
 
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
 ```diff
-- red
+
+All Information on CapEx in this block.
+
+Can highligh sentences as follows :
+
+- Expensiture was very high this year.
+
+- Other Information
+
+
 ```
 
 
