--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -11,6 +11,19 @@
 This will contain all the Financial numbers and note of the company discussed in the Concall.
 ```
 
+Tabular Formatting :
+
+| Header 1 | Header 2   | Header 3  | Header 4  | Header 5 |
+|----------|----------|----------|----------|----------|
+| **Ratios**    |ROCE : _40%_|ROE : _50%_ | PE : 25  |PB : 1.2|
+| **Margins**   | Data D     | Data A     | Data B   |
+| **Profits**   | Data       | Data       | Data     | Data |
+| **Revenue**   | Data       | Data       | Data     | Data | Data |
+
+
+OR  
+Dropdown Formatting :
+
 <!----------------------------- Tab 1 ------------------------------>
 <details> 
 <summary> Ratios</summary>  
@@ -48,7 +61,7 @@ This will contain all the Financial numbers and note of the company discussed in
 
 
 
-
+---
 
 [blog]: https://eresh-zealous.medium.com/
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][blog]
@@ -73,10 +86,8 @@ This will contain all the Products related information given by the company duri
 </details>
 
 
-
-
+---
 [blog]: https://eresh-zealous.medium.com/
-
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
 ```diff
 
@@ -92,9 +103,8 @@ Can highligh sentences as follows :
 ```
 
 
-
+---
 [blog]: https://eresh-zealous.medium.com/
-
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
 ```diff
 # grey
@@ -103,14 +113,16 @@ Can highligh sentences as follows :
   
 [blog]: https://eresh-zealous.medium.com/
 
-
+---
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
 ```diff
 @@ purple @@
 ```
-
+---
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][blog]
-
+```diff
+# grey
+```
 
 
 
