--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -4,19 +4,21 @@
 
 
 
+  
 [blog]: https://eresh-zealous.medium.com/
-
-#### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][blog]
+  
+> #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][blog]
 ```
 This will contain all the Financial numbers and note of the company discussed in the Concall.
 ```
 
 Tabular Formatting :
 
-| Header 1 | Header 2   | Header 3  | Header 4  | Header 5 |
-|----------|----------|----------|----------|----------|
+
+| Header 1 | Header 2   | Header 3  | Header 4  | Header 5 | Header 2   | Header 3  | Header 4  | Header 5 |
+|----------|----------|----------|----------|----------|----------|----------|----------|----------|
 | **Ratios**    |ROCE : _40%_|ROE : _50%_ | PE : 25  |PB : 1.2|
-| **Margins**   | Data D     | Data A     | Data B   |
+| **Margins**   | Data D     | Data A     | Data B   |Data D     | Data A     | Data B   |Data D     |
 | **Profits**   | Data       | Data       | Data     | Data |
 | **Revenue**   | Data       | Data       | Data     | Data | Data |
 
@@ -61,10 +63,9 @@ Dropdown Formatting :
 
 
 
----
 
 [blog]: https://eresh-zealous.medium.com/
-#### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][blog]
+> #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][blog]
 ```
 This will contain all the Products related information given by the company during the Concall.
 ```
@@ -86,9 +87,9 @@ This will contain all the Products related information given by the company duri
 </details>
 
 
----
+
 [blog]: https://eresh-zealous.medium.com/
-#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
+> #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
 ```diff
 
 All Information on CapEx in this block.
@@ -103,9 +104,8 @@ Can highligh sentences as follows :
 ```
 
 
----
 [blog]: https://eresh-zealous.medium.com/
-#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
+> #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
 ```diff
 # grey
 ```
@@ -113,13 +113,13 @@ Can highligh sentences as follows :
   
 [blog]: https://eresh-zealous.medium.com/
 
----
-#### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
+
+> #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
 ```diff
 @@ purple @@
 ```
----
-#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][blog]
+
+> #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][blog]
 ```diff
 # grey
 ```
