--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -9,7 +9,7 @@
   
 > #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][blog]
 ```
-This will contain all the Financial numbers and note of the company discussed in the Concall.
+This will contain all the Financial notes of the company discussed in the Concall other than numbers.
 ```
 
 Tabular Formatting :
@@ -94,7 +94,7 @@ This will contain all the Products related information given by the company duri
 
 All Information on CapEx in this block.
 
-Can highligh sentences as follows :
+Can highlight sentences as follows :
 
 - Expensiture was very high this year.
 
