--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -23,7 +23,13 @@ Tabular Formatting :
 | **Revenue**   | Data       | Data       | Data     | Data | Data |
 
 
-OR  
+OR
+
+![image](https://github.com/qodeinvestments/Swan-Documentation/assets/132358701/25c39a75-6cb2-4f65-b7a0-d0780e5bcc5d)
+
+OR
+
+
 Dropdown Formatting :
 
 <!----------------------------- Tab 1 ------------------------------>
