--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -5,97 +5,38 @@
 
 
   
-[blog]: https://eresh-zealous.medium.com/
-  
-> #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][blog]
+[fin]: https://www.screener.in/company/LINC/
+#### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
+```diff
+! This will contain all the Financial notes of the company discussed in the Concall other than numbers.
+
+
+
+
+
 ```
-This will contain all the Financial notes of the company discussed in the Concall other than numbers.
+
+
+
+
+[products]: https://eresh-zealous.medium.com/
+#### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
+```diff
++ This will contain all the Products related information given by the company during the Concall.
+
+
+
+
+
+
 ```
 
-Tabular Formatting :
-
-
-| Header 1 | Header 2   | Header 3  | Header 4  | Header 5 | Header 2   | Header 3  | Header 4  | Header 5 |
-|----------|----------|----------|----------|----------|----------|----------|----------|----------|
-| **Ratios**    |ROCE : _40%_|ROE : _50%_ | PE : 25  |PB : 1.2|
-| **Margins**   | Data D     | Data A     | Data B   |Data D     | Data A     | Data B   |Data D     |
-| **Profits**   | Data       | Data       | Data     | Data |
-| **Revenue**   | Data       | Data       | Data     | Data | Data |
-
-
-OR
-
-![image](https://github.com/qodeinvestments/Swan-Documentation/assets/132358701/25c39a75-6cb2-4f65-b7a0-d0780e5bcc5d)
-
-OR
-
-
-Dropdown Formatting :
-
-<!----------------------------- Tab 1 ------------------------------>
-<details> 
-<summary> Ratios</summary>  
-
-1)  ROCE : _40%_
-2)  ROE  : _55%_
-3)  PE   : 25
-4)  PB   : 1.2
-</details>
-<!----------------------------- Tab 2 ------------------------------>
-<details> 
-<summary> Margins</summary>
-
-1)  OPM  : _20%_
-
-    Notes :  
-    Profits margins of Linc depends highly on Crude and Polymer prices.
-
-</details>
-<!----------------------------- Tab 3 ------------------------------>
-<details> 
-<summary> Profits</summary>
-
-1)  PBIT : _40%_
-2)  PAT  : _55%_
-3)  EPS  : 25
-</details>
-<!----------------------------- Tab 4 ------------------------------>
-<details> 
-<summary> Revenue</summary>
-
-1)  Revenue Growth : _30%_
-</details>
- 
 
 
 
 
 [blog]: https://eresh-zealous.medium.com/
-> #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][blog]
-```
-This will contain all the Products related information given by the company during the Concall.
-```
-
-<!----------------------------- Tab 1 ------------------------------>
-<details> 
-<summary> Pentonic</summary>  
-    Pentonic Information..
-</details>
-<!----------------------------- Tab 2 ------------------------------>
-<details> 
-<summary> Deli</summary>
-    Deli Information..
-</details>
-<!----------------------------- Tab 3 ------------------------------>
-<details> 
-<summary> Sanitizers</summary>
-    Sanitizers Information..
-</details>
-
-
-
-[blog]: https://eresh-zealous.medium.com/
-> #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
+#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
 ```diff
 
 All Information on CapEx in this block.
@@ -107,25 +48,38 @@ Can highlight sentences as follows :
 - Other Information
 
 
+
+
 ```
 
 
 [blog]: https://eresh-zealous.medium.com/
-> #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
+#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
 ```diff
 # grey
+
+
+
+
+
+
+
 ```
 
   
-[blog]: https://eresh-zealous.medium.com/
-
-
-> #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][blog]
+[ind]: https://eresh-zealous.medium.com/
+#### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 @@ purple @@
-```
 
-> #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][blog]
+
+
+
+
+
+```
+[management]: https://eresh-zealous.medium.com/
+#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][management]
 ```diff
 # grey
 ```
