--- a/Systems/100_Baggers/Linc Ltd/Notes/Q1FY24.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q1FY24.md
@@ -76,3 +76,99 @@ Infra work will be completed with 17 crores from Internal accruals.
 
 
 
+### Q4FY23: Linc Ltd.
+#### Updated by: Rishabh Nahar/Purnanand Kulkarni
+##### Date: 08.08.2023
+
+
+
+  
+[fin]: https://www.screener.in/company/LINC/
+#### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
+```diff
+! This will contain all the Financial notes of the company discussed in the Concall other than numbers.
+
+
+
+
+
+```
+
+
+
+
+[products]: https://eresh-zealous.medium.com/
+#### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
+```diff
++ This will contain all the Products related information given by the company during the Concall.
+
+
+
+
+
+
+```
+
+
+
+
+
+[blog]: https://eresh-zealous.medium.com/
+#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
+```diff
+
+All Information on CapEx in this block.
+
+Can highlight sentences as follows :
+
+- Expensiture was very high this year.
+
+- Other Information
+
+
+
+
+```
+
+
+[blog]: https://eresh-zealous.medium.com/
+#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
+```diff
+# grey
+
+
+
+
+
+
+
+```
+
+  
+[ind]: https://eresh-zealous.medium.com/
+#### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
+```diff
+@@ purple @@
+
+
+
+
+
+
+```
+[management]: https://eresh-zealous.medium.com/
+#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][management]
+```diff
+# grey
+```
+
+
+
+
+
+
+
+
+
+
+
