--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY22.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY22.md
@@ -1,44 +1,21 @@
+<h2 align="center"> Q4 FY23: Linc Ltd.</h2>
+<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
+<h4 align="center"> Date: 09.08.2023</h4>
 
-Concall Notes - June 2022
-
-### Business & Operational Highlights (by Deepak Jalan, MD of Linc Ltd.) :
-•	Market Share of Linc is 8%  
-•	Co. earlier focused on lower segment market, but it has shifted focus to Rs. 10 & above segment, starting with **Pentonic** in 2019.  
-•	USP of Pentonic: Minimal, Writing smoothness, Unique Design.  
-•	**Pentonic** contributes to 25% of Revenue.   
-•	GPM of Pentonic: 43% (Very High)  , helps in overall increase in GPM.  
-•	**RAW Material Cost is directly proportional to Crude & Polymer Prices**. Impacts a lot on GPM.  
-•	Other cost includes: freight rates (transportation cost), marketing, new customer acquisition.  
-  
-### •	5 Strategies adopted by the Company, Linc 2.0 :  
-  
-»	**Increasing Touch Points**: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22. Expects to reach 5 Lakh touch points by FY25.  
-  
-»	**Higher Margin Products**: Introduction of **Pentonic**. No other pen company has dared to envision a pen at Rs. 10 price point without metal clip, transfer film or individual packaging. Co. is focusing on growing Pentonic more and add more products in its portfolio.
-  
-»	**Stationary Products**: Linc is India’s exclusive importer and distributor for **Deli**, which is Asia's largest stationary manufacturer. It is expected that Deli business should add about Rs. 100 crores to the company's turnover in 3 to 4 years’ time.  
-  
-»	**Step up existing capacity**: Co. has an expansion plan wherein it is putting up a new manufacturing facility in the existing location at Gujarat. This will double to in-house capacity (10Lakh to 20Lakh pens per day).
-  
-»	**Environmental, Social & Governance**: Substituting plastic wrapper packaging with paper bulk packaging. Working on recycling of used pens.   
-  
-
-
-_India has over 10 million non-stationary outlets_
-
-
-### Q4FY23: Linc Ltd.
-#### Updated by: Rishabh Nahar/Purnanand Kulkarni
-##### Date: 08.08.2023
-
-
-
-  
 [fin]: https://www.screener.in/company/LINC/
+[products]: https://lincpen.com/products
+[capex]: https://eresh-zealous.medium.com/
+[strategy]: https://eresh-zealous.medium.com/
+[ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
+[investor_relations]: https://lincpen.com/investor-relations
+
+
+
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
-! This will contain all the Financial notes of the company discussed in the Concall other than numbers.
-
+! Market Share of Linc is 8%
+! RAW Material Cost is directly proportional to Crude & Polymer Prices. Impacts a lot on Gross Profit Margin.  
+! Other cost includes: freight rates (transportation cost), marketing, new customer acquisition.  
 
 
 
@@ -48,10 +25,28 @@ _India has over 10 million non-stationary outlets_
 
 
 
-[products]: https://eresh-zealous.medium.com/
+
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
+~~~diff
+
++ Co. earlier focused on lower segment market, but it has shifted focus to Rs. 10 & above segment, starting with Pentonic in 2019.  
++ USP of Pentonic: Minimal, Writing smoothness, Unique Design.  
++ Pentonic contributes to 25% of Revenue.   
++ GPM of Pentonic: 43% (Very High)  , helps in overall increase in GPM.  
+
+
+
+
+
+~~~
+
+
+
+
+
+
+#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
-+ This will contain all the Products related information given by the company during the Concall.
 
 
 
@@ -62,32 +57,17 @@ _India has over 10 million non-stationary outlets_
 
 
 
-
-
-[blog]: https://eresh-zealous.medium.com/
-#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
+#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
-
-All Information on CapEx in this block.
-
-Can highlight sentences as follows :
-
-- Expensiture was very high this year.
-
-- Other Information
-
-
-
-
-```
-
-
-[blog]: https://eresh-zealous.medium.com/
-#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
-```diff
-# grey
-
-
+# Increasing Touch Points: Co. increased its touch points from 5000 to 1 Lakh outlets from FY20 to FY22.Expects to reach 5 Lakh touch points by FY25.  
+  
+# Higher Margin Products: Introduction of Pentonic. No other pen company has dared to envision a pen at Rs. 10 price point without metal clip, transfer film or individual packaging. Co. is focusing on growing Pentonic more and add more products in its portfolio.
+  
+# Stationary Products: Linc is India’s exclusive importer and distributor for **Deli**, which is Asia's largest stationary manufacturer. It is expected that Deli business should add about Rs. 100 crores to the company's turnover in 3 to 4 years’ time.  
+  
+# Step up existing capacity Co. has an expansion plan wherein it is putting up a new manufacturing facility in the existing location at Gujarat. This will double to in-house capacity (10Lakh to 20Lakh pens per day).
+  
+# Environmental, Social & Governance: Substituting plastic wrapper packaging with paper bulk packaging. Working on recycling of used pens.  
 
 
 
@@ -96,7 +76,7 @@ Can highlight sentences as follows :
 ```
 
   
-[ind]: https://eresh-zealous.medium.com/
+
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 @@ purple @@
@@ -107,8 +87,10 @@ Can highlight sentences as follows :
 
 
 ```
-[management]: https://eresh-zealous.medium.com/
-#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][management]
+
+
+
+#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
 # grey
 ```
