--- a/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/Q4 FY23.md
@@ -9,7 +9,10 @@
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 ! This will contain all the Financial notes of the company discussed in the Concall other than numbers.
-
+! Exports - 20% of Revenues
+! Debt: Significant reduction in Net Debt. Now they are a debt free company.
+! Worldwide Uniball sales are around 5000 crores( Sold by Mitsubishi Japan Co.): This shows that Linc has a big headroom over here.
+! 
 
 
 
@@ -23,6 +26,11 @@
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
 ```diff
 + This will contain all the Products related information given by the company during the Concall.
++ Pentatonic is 30% of Revenues.
++ Pentatonic was launched as a product, but now it has become a brand itself. So the new and more expensive products will be
++ launched under this brand itself.
++ UNiball contributes to around 13-14% of Revenues. Uniball also owns 13.5% of Linc India.
++ Volume of Pens sold in FY23: 75 Crore Pens
 
 
 
@@ -38,14 +46,16 @@
 [blog]: https://eresh-zealous.medium.com/
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
 ```diff
+- Modular expansion of existing capacity is being done near the existing factory. Current basic infra has been completed to take the 20lakh pens per day. 
+- Equipment and machinery will be added as and when the need comes up. Total Cost will be 50 Crores
+- Phase 1: FY25: 15 Lakh pens per day. Rs.17 Crores through internal accruals
+- Phase 2: FY26: Rs.15 Crores
+- Of the total 75 Crore pens sold in FY23: 50% was produced inhouse and 50% outsourced.
+- Now to meet the guidance and demands for FY25 they need to expand the capacity by 30Crores. IN peak seasons the capacity falls short.
+- Hence the capex. Earlier they had planned capex of 35 Crores in FY24 but now this is 17-18 Crores 
 
-All Information on CapEx in this block.
 
-Can highlight sentences as follows :
 
-- Expensiture was very high this year.
-
-- Other Information
 
 
 
@@ -57,8 +67,13 @@ Can highlight sentences as follows :
 #### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
 ```diff
 # grey
-
-
+# Linc 2.0 is the new Strategy: It is a 5 point strategy
+# 1.Touchpoints: Increase touchpoints. India has 10Mn kirana outlets. Currently Linc has reached 2.4L outlets. Will take this number to 5L by FY25.
+# 2.Focus on higher margin products. Most developments under the pentatonic portfolio: 3 products to be launch in FY24
+# 3.Stationery Products: Using the Deli brand, they will make bigger inroads.FY23 Deli Sales: 25Crores will take this to 75Crores by FY25
+# 4.Step up Existing Capacity to match the demand:Currently they employ 1200 female workers.
+# Generally it takes 6 months to design and develop a product. Products are designed by top class engineers and designers.
+# Once the product is designed they have it launched in a few markets like a test run: For 1-2 months. If it does well then full launch
 
 
 
@@ -71,8 +86,8 @@ Can highlight sentences as follows :
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 @@ purple @@
-
-
+@@ Market Share: 8% in the pen segment
+@@ South and West Zone Market Share: 36%
 
 
 
@@ -82,6 +97,16 @@ Can highlight sentences as follows :
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][management]
 ```diff
 # grey
+# FY25 Revenue: Rs.750 Crores. Pentatonic will contribute to a 40% share in revenues. Deli will be 10% of Revenues
+# FY25 Ebitda Margin: 15%
+# FY25 ROE: 21%
+# Deli Sales: FY25: 75Crores
+
+
+
+
+
+
 ```
 
 
