--- a/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY24 Q1.md
@@ -76,14 +76,20 @@ Infra work will be completed with 17 crores from Internal accruals.
 
 
 
-### Q4FY23: Linc Ltd.
-#### Updated by: Rishabh Nahar/Purnanand Kulkarni
-##### Date: 08.08.2023
+<h2 align="center"> FY24 Q1: Linc Ltd.</h2>
+<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
+<h4 align="center"> Date: 09.08.2023</h4>
 
+[fin]: https://www.screener.in/company/LINC/
+[products]: https://lincpen.com/products
+[capex]: https://eresh-zealous.medium.com/
+[strategy]: https://eresh-zealous.medium.com/
+[ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
+[investor_relations]: https://lincpen.com/investor-relations
 
 
   
-[fin]: https://www.screener.in/company/LINC/
+
 #### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
 ```diff
 ! This will contain all the Financial notes of the company discussed in the Concall other than numbers.
@@ -97,7 +103,7 @@ Infra work will be completed with 17 crores from Internal accruals.
 
 
 
-[products]: https://eresh-zealous.medium.com/
+
 #### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
 ```diff
 + This will contain all the Products related information given by the company during the Concall.
@@ -113,8 +119,8 @@ Infra work will be completed with 17 crores from Internal accruals.
 
 
 
-[blog]: https://eresh-zealous.medium.com/
-#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][blog]
+
+#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
 
 All Information on CapEx in this block.
@@ -131,8 +137,7 @@ Can highlight sentences as follows :
 ```
 
 
-[blog]: https://eresh-zealous.medium.com/
-#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][blog]
+#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
 ```diff
 # grey
 
@@ -144,8 +149,7 @@ Can highlight sentences as follows :
 
 ```
 
-  
-[ind]: https://eresh-zealous.medium.com/
+
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
 @@ purple @@
@@ -156,8 +160,9 @@ Can highlight sentences as follows :
 
 
 ```
-[management]: https://eresh-zealous.medium.com/
-#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][management]
+
+
+#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
 # grey
 ```
