--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q4.md
@@ -16,8 +16,11 @@
 ! Exports - 20% of Revenues
 ! Debt: Significant reduction in Net Debt. Now they are a debt free company.
 ! Worldwide Uniball sales are around 5000 crores( Sold by Mitsubishi Japan Co.): This shows that Linc has a big headroom over here.
-! 
-
+! Margin Expansions: This year margins are better because of 1. Pentatonic share in Revenues has gone up, 2.Increase in prices of legacy
+! products. 3. Polymer prices have been moderate right now 4.Exports: Since rupee became weak the realisations were higher
+! Growth in revenue due to two factors: 17% is Volume Growth and rest is price increase
+! Gross Margins: Pentatonic: 40%, Uniball(Trading): 20% and Linc:25%
+! Dividend Payout: Generally 30% of PAT
 
 
 
@@ -34,6 +37,9 @@
 + launched under this brand itself.
 + UNiball contributes to around 13-14% of Revenues. Uniball also owns 13.5% of Linc India.
 + Volume of Pens sold in FY23: 75 Crore Pens
++ Pentatonic: 2 pens: Rs.10 and Rs.20 and now launching a third Rs.40 pen
++ Major growth has been seen in Pentatonic and Uniball, so the above Rs.10 pens. Below Rs.10 pens have seen single digit growth or stagnant
++ 
 
 
 
@@ -54,7 +60,8 @@
 - Phase 2: FY26: Rs.15 Crores
 - Of the total 75 Crore pens sold in FY23: 50% was produced inhouse and 50% outsourced.
 - Now to meet the guidance and demands for FY25 they need to expand the capacity by 30Crores. IN peak seasons the capacity falls short.
-- Hence the capex. Earlier they had planned capex of 35 Crores in FY24 but now this is 17-18 Crores 
+- Hence the capex. Earlier they had planned capex of 35 Crores in FY24 but now this is 17-18 Crores and the rest next year.
+
 
 
 
@@ -76,8 +83,9 @@
 # 4.Step up Existing Capacity to match the demand:Currently they employ 1200 female workers.
 # Generally it takes 6 months to design and develop a product. Products are designed by top class engineers and designers.
 # Once the product is designed they have it launched in a few markets like a test run: For 1-2 months. If it does well then full launch
-
-
+# Exports: Overall exports is around $250 million a year from India. But this is mostly white labelling. They dont like doing a lot of White labelling.
+# In exports they are focusing on the American markets: North America separately. Because Europe and Germany are tough markets since they have their own brands. 
+# Three main ideas: 1. Make pentatonic bigger 2. Increase distribution networks 3. Increase the number of touchpoints
 
 
 
@@ -90,6 +98,7 @@
 @@ purple @@
 @@ Market Share: 8% in the pen segment
 @@ South and West Zone Market Share: 36%
+@@ Pens market to grow at 7-8% p.a
 
 
 
