--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q4.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q4.md
@@ -15,9 +15,9 @@
 
 ! Exports - 20% of Revenues
 ! Debt: Significant reduction in Net Debt. Now they are a debt free company.
-! Worldwide Uniball sales are around 5000 crores( Sold by Mitsubishi Japan Co.): This shows that Linc has a big headroom over here.
-! Margin Expansions: This year margins are better because of 1. Pentatonic share in Revenues has gone up, 2.Increase in prices of legacy
-! products. 3. Polymer prices have been moderate right now 4.Exports: Since rupee became weak the realisations were higher
+! Margin Expansions: This year margins are better because of 1. Pentatonic share in Revenues has gone up,
+! 2.Increase in prices of legacy products. 3. Polymer prices have been moderate right now
+! 4.Exports: Since rupee became weak the realisations were higher
 ! Growth in revenue due to two factors: 17% is Volume Growth and rest is price increase
 ! Gross Margins: Pentatonic: 40%, Uniball(Trading): 20% and Linc:25%
 ! Dividend Payout: Generally 30% of PAT
@@ -38,7 +38,8 @@
 + UNiball contributes to around 13-14% of Revenues. Uniball also owns 13.5% of Linc India.
 + Volume of Pens sold in FY23: 75 Crore Pens
 + Pentatonic: 2 pens: Rs.10 and Rs.20 and now launching a third Rs.40 pen
-+ Major growth has been seen in Pentatonic and Uniball, so the above Rs.10 pens. Below Rs.10 pens have seen single digit growth or stagnant
++ Major growth has been seen in Pentatonic and Uniball, so the above Rs.10 pens.
++ Below Rs.10 pens have seen single digit growth or stagnant
 
 
 
@@ -54,13 +55,15 @@
 
 #### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
 ```diff
-- Modular expansion of existing capacity is being done near the existing factory. Current basic infra has been completed to take the 20lakh pens per day. 
+- Modular expansion of existing capacity is being done near the existing factory.
+- Current basic infra has been completed to take the 20lakh pens per day. 
 - Equipment and machinery will be added as and when the need comes up. Total Cost will be 50 Crores
 - Phase 1: FY25: 15 Lakh pens per day. Rs.17 Crores through internal accruals
 - Phase 2: FY26: Rs.15 Crores
 - Of the total 75 Crore pens sold in FY23: 50% was produced inhouse and 50% outsourced.
-- Now to meet the guidance and demands for FY25 they need to expand the capacity by 30Crores. IN peak seasons the capacity falls short.
-- Hence the capex. Earlier they had planned capex of 35 Crores in FY24 but now this is 17-18 Crores and the rest next year.
+- Now to meet the guidance and demands for FY25 they need to expand the capacity by 30Crores.
+- In peak seasons the capacity falls short. Hence the capex.
+- Earlier they had planned capex of 35 Crores in FY24 but now this is 17-18 Crores and the rest next year.
 
 
 
@@ -77,15 +80,20 @@
 ```diff
 
 # Linc 2.0 is the new Strategy: It is a 5 point strategy
-# 1.Touchpoints: Increase touchpoints. India has 10Mn kirana outlets. Currently Linc has reached 2.4L outlets. Will take this number to 5L by FY25.
+# 1.Touchpoints: Increase touchpoints. India has 10Mn kirana outlets. Currently Linc has reached 2.4L outlets.
+# Will take this number to 5L by FY25.
 # 2.Focus on higher margin products. Most developments under the pentatonic portfolio: 3 products to be launch in FY24
-# 3.Stationery Products: Using the Deli brand, they will make bigger inroads.FY23 Deli Sales: 25Crores will take this to 75Crores by FY25
+# 3.Stationery Products: Using the Deli brand, they will make bigger inroads.
+# FY23 Deli Sales: 25Crores will take this to 75Crores by FY25
 # 4.Step up Existing Capacity to match the demand:Currently they employ 1200 female workers.
 # Generally it takes 6 months to design and develop a product. Products are designed by top class engineers and designers.
 # Once the product is designed they have it launched in a few markets like a test run: For 1-2 months. If it does well then full launch
-# Exports: Overall exports is around $250 million a year from India. But this is mostly white labelling. They dont like doing a lot of White labelling.
-# In exports they are focusing on the American markets: North America separately. Because Europe and Germany are tough markets since they have their own brands. 
-# Three main ideas: 1. Make pentatonic bigger 2. Increase distribution networks 3. Increase the number of touchpoints
+# Exports: Overall exports is around $250 million a year from India.
+# But this is mostly white labelling. They dont like doing a lot of White labelling.
+# In exports they are focusing on the American markets: North America separately.
+# Because Europe and Germany are tough markets since they have their own brands. 
+# Three main ideas: 1. Make pentatonic bigger 2. Increase distribution networks
+# 3. Increase the number of touchpoints
 
 
 
@@ -95,10 +103,11 @@
 
 #### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
 ```diff
-@@ purple @@
-@@ Market Share: 8% in the pen segment
-@@ South and West Zone Market Share: 36%
-@@ Pens market to grow at 7-8% p.a
+
+@@ Market Share: 8% in the pen segment @@
+@@ South and West Zone Market Share: 36% @@
+@@ Pens market to grow at 7-8% p.a @@
+@@ Worldwide Uniball sales are around 5000 crores( Sold by Mitsubishi Japan Co.): This shows that Linc has a big headroom over here. @@
 
 
 
@@ -107,7 +116,7 @@
 [management]: https://eresh-zealous.medium.com/
 #### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
 ```diff
-# grey
+
 # FY25 Revenue: Rs.750 Crores. Pentatonic will contribute to a 40% share in revenues. Deli will be 10% of Revenues
 # FY25 Ebitda Margin: 15%
 # FY25 ROE: 21%
