--- a/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
+++ b/Systems/100_Baggers/Linc Ltd/Notes/FY23 Q3.md
@@ -1,1 +1,77 @@
+<h2 align="center"> FY23 Q3: Linc Ltd.</h2>
+<h4 align="center"> Updated by: Rishabh Nahar/Purnanand Kulkarni</h4>
+<h4 align="center"> Date: 09.08.2023</h4>
+
+[fin]: https://www.screener.in/company/LINC/
+[products]: https://lincpen.com/products
+[capex]: https://eresh-zealous.medium.com/
+[strategy]: https://eresh-zealous.medium.com/
+[ind]: https://www.verifiedmarketresearch.com/product/india-writing-instruments-market/
+[investor_relations]: https://lincpen.com/investor-relations
+
+  
+#### Financials:   [<img align="centre" alt="Java" width="30px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Financials%20Logo%201.png" />][fin]
+```diff
+
+!
+
+
+
+```
+
+
+
+
+#### Products [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Products%20Logo%201.jpg" />][products]
+```diff
+
++ 
+
+
+
+
+
+
+```
+
+
+
+
+
+#### Capex [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Capex%20Logo%201.jpg" />][capex]
+```diff
+- 
+
+
+
+
+
+
+
+```
+
+
+
+#### Strategy [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Strategy%20Logo%203.jpg" />][strategy]
+```diff
+
+# 
+
+
+```
+
+  
+
+#### Industry   [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/Industry%20Logo%201.jpg" />][ind]
+```diff
+
+@@
+
+```
+[management]: https://eresh-zealous.medium.com/
+#### Guidance [<img align="centre" alt="Java" width="50px" src="https://github.com/qodeinvestments/Swan-Documentation/blob/main/Systems/100_Baggers/github_pages/logo_files/magnifying-glass.svg" />][investor_relations]
+```diff
+
+# 
+
 
